# ringtail

./: .env.example  .gitignore  .oxfmtrc.json  .oxlintrc.json  .tool-versions  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  SECURITY.md  Tiltfile  bun.lockb  eslint.config.mjs  lefthook.yml  nx.json  package.json  tilt_down.sh  tilt_up.sh  tsconfig.base.json
.claude/skills/dev-down/: SKILL.md
.claude/skills/dev-restart/: SKILL.md
.claude/skills/dev-up/: SKILL.md
.devops/: Tiltfile
.github/workflows/: ci.yml  publish.yml
.storybook/: main.ts  preview.tsx
api-collections/: README.md  bruno.json
api-collections/openapi/: daemon.yaml
apps/dashboard/: e2e.html  index.html  package.json  vite.config.ts
apps/dashboard/src/: App.tsx  (+3 more)
apps/desktop/: README.md  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/docs/: .gitignore  DEPLOY.md  deploy.sh  env.d.ts  mdx-components.tsx  next.config.mjs  package.json  postcss.config.mjs  source.config.ts  tsconfig.json  tsconfig.typecheck.json  wrangler.toml
docs/: architecture.md
docs/brand/: _bible.md  brand-soul.md  brand-voice.md  design-lock.md
libs/config/: package.json
libs/core/: package.json  tsconfig.json
libs/recipes/: package.json  tsconfig.json
libs/sinks/: package.json
libs/store/: package.json
libs/ui/: DISTRIBUTION.md  package.json  tsup.config.ts
scripts/: docs-sync.test.ts
services/daemon/: package.json  tsconfig.json
(+183 files in other folders)
